<resources>
    <string name="app_name">Harduino</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="device_list_tab_title">Devices</string>
    <string name="paired_device_list_tab_title">Paired Devices</string>
    <string name="bluetooth_not_supported">Bluetooth not supported on this device :(</string>
    <string name="speed">Speed</string>
    <string name="forward">forward</string>
    <string name="back">back</string>
    <string name="start">Go</string>
    <string name="stop">Stop</string>
    <string name="all_forward">All Forward</string>
    <string name="all_back">All Back</string>
    <string name="fire">Fire</string>
    <string name="elevation">Elevation</string>
    <string name="turret_left">TURRET LEFT</string>
    <string name="turret_right">TURRET RIGHT</string>
    <string name="turret_up">TURRET UP</string>
    <string name="turret_down">TURRET DOWN</string>

</resources>
