<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/verticalSeekbarTextLeft"
        android:padding="@dimen/padding_medium"
        android:text="@string/speed"
        tools:context=".DeviceActivity"
        android:textSize="18sp"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_height="wrap_content"
        android:id="@+id/gunElevetionText"
        android:padding="@dimen/padding_medium"
        android:text="@string/elevation"
        tools:context=".DeviceActivity"
        android:textSize="18sp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_width="120dp" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/verticalSeekbarTextRight"
        android:padding="@dimen/padding_medium"
        android:text="@string/speed"
        tools:context=".DeviceActivity"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/verticalSeekbarTextLeft"
        android:layout_alignBottom="@+id/verticalSeekbarTextLeft"
        android:layout_alignParentEnd="true"
        />


    <TableLayout
        android:id="@+id/controller_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:weightSum="6"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">


        <TableRow
            android:id="@+id/table_3"
            android:layout_weight="1">

            <Button
                android:id="@+id/turret_left_button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/turret_left"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/turret_right_button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/turret_right"
                tools:ignore="ButtonStyle" />

        </TableRow>

        <TableRow
            android:id="@+id/table_1"
            android:layout_weight="1">

            <Button
                android:id="@+id/forward_left_button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/forward"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/forward_right_button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/forward"
                tools:ignore="ButtonStyle" />
        </TableRow>

        <TableRow
            android:id="@+id/table_2"
            android:layout_weight="1">

            <Button
                android:id="@+id/back_left_button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/back"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/back_right_button"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/back"
                tools:ignore="ButtonStyle" />
        </TableRow>

    </TableLayout>


    <Button
        android:id="@+id/gun_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gun_down_button"
        android:layout_alignParentStart="true"
        android:text="@string/turret_up"
        android:layout_alignEnd="@+id/gun_down_button" />

    <Button
        android:id="@+id/gun_down_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/controller_container"
        android:layout_alignParentStart="true"
        android:text="@string/turret_down" />

    <Button
        android:id="@+id/fire_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fire"
        android:layout_above="@+id/controller_container"
        android:layout_alignParentEnd="true" />


</RelativeLayout>